Fixed horizontal bar issue on mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -188,7 +188,7 @@ p {
 }
 @media (max-width: 500px) {
   .cta header {
-    width: 450px;
+    width: 100%;
     height: auto;
   }
 }
@@ -202,8 +202,9 @@ p {
 @media (max-width: 500px) {
   .cta header h1 {
     padding: 0;
-    padding-top: 70px;
-    padding-bottom: 33px;
+    padding-top: 13%;
+    padding-bottom: 10%;
+    padding-left: 3%;
     font-size: 5rem;
     line-height: 60px;
   }
