--- a/less/homepage.less
+++ b/less/homepage.less
@@ -19,7 +19,7 @@
     .center();
 
     @media @mobile {
-      width: 450px;
+      width: 100%;
       height: auto;
     }
 
@@ -32,8 +32,9 @@
 
       @media @mobile {
         padding: 0;
-        padding-top: 70px;
-        padding-bottom: 33px;
+        padding-top: 13%;
+        padding-bottom: 10%;
+        padding-left: 3%;
         font-size: 5rem;
         line-height: 60px;
       }
